--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="home__information">
           <span class="home__pressent anime-text">Hello, My name is</span>
           <h1 class="home__title anime-text">Eslam Afifi</h1>
-          <span class="home__skill anime-text">Web Developer</span>
+          <span class="home__skill anime-text">freelance</span>
 
           <div>
             <a href="#" class="home__button anime-text">DOWNLOAD CV</a>
